--- a/package.json
+++ b/package.json
@@ -9,14 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
+    "@types/react-datepicker": "^4.15.0",
     "@types/react-dom": "18.2.7",
+    "@types/react-toastify": "^4.1.0",
+    "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
     "react": "18.2.0",
+    "react-date-picker": "^10.5.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.1.2",
+    "react-toastify": "^9.1.3",
     "typescript": "5.2.2"
   }
 }
